# Sandbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  writerside.yml
docs/Writerside/: writerside.cfg
docs/Writerside/topics/: Default-topic.md
include/: FakeLibrary.hpp
test/: FakeLibraryTest.cpp  SimpleTest.cpp
